[package]
name = "sfo-serde-result"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/wugren/sfo-serde-result.git"
description = "A simple library to serialize and deserialize result using Serde"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
